--- a/be/package.json
+++ b/be/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/multer": "^1.4.8",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
@@ -17,6 +18,7 @@
     "jsonwebtoken": "^9.0.1",
     "mongodb": "5.7",
     "mongoose": "^7.5.4",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.4",
     "nodemon": "^3.0.1",
     "socket.io": "^4.7.2",
