--- a/fe/package.json
+++ b/fe/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-toastify": "^9.1.3",
+    "socket.io-client": "^4.7.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
