--- a/fe/package.json
+++ b/fe/package.json
@@ -16,8 +16,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "socket.io-client": "^4.7.2",
     "zod": "^3.22.4"
